--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,10 @@
 set(ZEUS_TEST_FILES
     ${ZEUS_TEST_ROOT}/test_main.cpp
+    ${ZEUS_TEST_ROOT}/assert_test.cpp
+    ${ZEUS_TEST_ROOT}/float_test.cpp
+    ${ZEUS_TEST_ROOT}/functional_test.cpp
+    ${ZEUS_TEST_ROOT}/platform_test.cpp
+    ${ZEUS_TEST_ROOT}/timer_test.cpp
     )
 
 set(ZEUS_TEST_GROUP ${ZEUS_TEST_FILES} PARENT_SCOPE)
