--- a/include/zeus/CMakeLists.txt
+++ b/include/zeus/CMakeLists.txt
@@ -10,6 +10,7 @@ set(ZEUS_HEADER_LIST
     ${ZEUS_SOURCE_ROOT}/zeus/functional.hpp
     ${ZEUS_SOURCE_ROOT}/zeus/platform.hpp
     ${ZEUS_SOURCE_ROOT}/zeus/timer.hpp
+    ${ZEUS_SOURCE_ROOT}/zeus/constants.hpp
     )
 
 # Wrap each list for the source groups above.
