[brief] Adds documentation folder.
[detailed]

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,6 +13,7 @@ skip_commits:
         - .clang-tidy
         - .gitignore
         - .travis.yml
+        - mkdocs.yml
 
 image: Visual Studio 2019
 
