--- a/include/zeus/CMakeLists.txt
+++ b/include/zeus/CMakeLists.txt
@@ -12,6 +12,7 @@ set(ZEUS_HEADER_LIST
     ${ZEUS_SOURCE_ROOT}/zeus/timer.hpp
     ${ZEUS_SOURCE_ROOT}/zeus/constants.hpp
     ${ZEUS_SOURCE_ROOT}/zeus/filesystem.hpp
+    ${ZEUS_SOURCE_ROOT}/zeus/compiler.hpp
     )
 
 # Wrap each list for the source groups above.
