[brief] Adds a function to obtain all unique pairs from a list.
[detailed]

--- a/include/zeus/CMakeLists.txt
+++ b/include/zeus/CMakeLists.txt
@@ -13,6 +13,7 @@ set(ZEUS_HEADER_LIST
     ${ZEUS_SOURCE_ROOT}/zeus/constants.hpp
     ${ZEUS_SOURCE_ROOT}/zeus/filesystem.hpp
     ${ZEUS_SOURCE_ROOT}/zeus/compiler.hpp
+    ${ZEUS_SOURCE_ROOT}/zeus/algorithm.hpp
     )
 
 # Wrap each list for the source groups above.
