--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -7,6 +7,7 @@ set(ZEUS_TEST_FILES
     ${ZEUS_TEST_ROOT}/timer_test.cpp
     ${ZEUS_TEST_ROOT}/filesystem_test.cpp
     ${ZEUS_TEST_ROOT}/compiler_test.cpp
+    ${ZEUS_TEST_ROOT}/algorithm_test.cpp
     )
 
 set(ZEUS_TEST_GROUP ${ZEUS_TEST_FILES} PARENT_SCOPE)
