--- a/include/zeus/CMakeLists.txt
+++ b/include/zeus/CMakeLists.txt
@@ -14,6 +14,8 @@ set(ZEUS_HEADER_LIST
     ${ZEUS_SOURCE_ROOT}/zeus/filesystem.hpp
     ${ZEUS_SOURCE_ROOT}/zeus/compiler.hpp
     ${ZEUS_SOURCE_ROOT}/zeus/algorithm.hpp
+    ${ZEUS_SOURCE_ROOT}/zeus/crtp.hpp
+    ${ZEUS_SOURCE_ROOT}/zeus/type_traits.hpp
     )
 
 # Wrap each list for the source groups above.
