--- a/.github/workflows/msvc.yml
+++ b/.github/workflows/msvc.yml
@@ -36,9 +36,7 @@ jobs:
         env:
           BUILD_TYPE: ${{ matrix.config.build_type }}
         run: |
-          New-Item -Path . -Name "build" -ItemType "directory"
-          Set-Location -Path ./build
-          cmake -G "Visual Studio 16 2019" .. -DBUILD_SHARED_LIBS=OFF
+          cmake --preset=msvc -DBUILD_SHARED_LIBS=OFF
 
       - name: Build
         shell: powershell
