[brief] Adds a strong typing header system.
[detailed]
- Seems like a good idea to have a setup for this around, in case it is
  ever needed.
- Adds tests for the strong typing (also has the nice side-effect of
  testing the CRTP header).

--- a/include/zeus/CMakeLists.txt
+++ b/include/zeus/CMakeLists.txt
@@ -16,6 +16,7 @@ set(ZEUS_HEADER_LIST
     ${ZEUS_SOURCE_ROOT}/zeus/algorithm.hpp
     ${ZEUS_SOURCE_ROOT}/zeus/crtp.hpp
     ${ZEUS_SOURCE_ROOT}/zeus/type_traits.hpp
+    ${ZEUS_SOURCE_ROOT}/zeus/named_type.hpp
     )
 
 # Wrap each list for the source groups above.
