--- a/include/zeus/CMakeLists.txt
+++ b/include/zeus/CMakeLists.txt
@@ -16,6 +16,7 @@ set(ZEUS_HEADER_LIST
     ${ZEUS_SOURCE_ROOT}/zeus/crtp.hpp
     ${ZEUS_SOURCE_ROOT}/zeus/type_traits.hpp
     ${ZEUS_SOURCE_ROOT}/zeus/named_type.hpp
+    ${ZEUS_SOURCE_ROOT}/zeus/enum_bitfield.hpp
     )
 
 # Wrap each list for the source groups above.
