[brief] Fixes for installation in Linux.
[detailed]
- Turns out that the way we were installing under Linux was wrong and
  the imported include paths ended up incorrect. This fixes the issue by
  changing the installation directory.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,12 +106,18 @@ endif()
 # Install targets.
 #================================
 if (ZEUS_INSTALL_TARGET)
+    if (MSVC)
+        set(INCLUDE_INSTALL_PATH "include")
+    else()
+        set(INCLUDE_INSTALL_PATH "include/libzeus")
+    endif()
+
     install(TARGETS zeus
         EXPORT zeus
         LIBRARY DESTINATION lib
         ARCHIVE DESTINATION lib
         RUNTIME DESTINATION lib
-        INCLUDES DESTINATION include
+        INCLUDES DESTINATION ${INCLUDE_INSTALL_PATH}
         )
 
     include(CMakePackageConfigHelpers)
@@ -134,9 +140,14 @@ if (ZEUS_INSTALL_TARGET)
         DESTINATION lib/cmake/zeus
         )
 
+    if (MSVC)
+        set(INCLUDE_INSTALL_DEST "${CMAKE_INSTALL_INCLUDEDIR}/zeus")
+    else()
+        set(INCLUDE_INSTALL_DEST "${CMAKE_INSTALL_INCLUDEDIR}/libzeus/zeus")
+    endif()
     install(FILES
         ${ZEUS_INCLUDE_GROUP}
-        DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/zeus"
+        DESTINATION ${INCLUDE_INSTALL_DEST}
         )
 endif()
 
