[brief] Adds a new string header.
[detailed]
- The goal here is to provide some convenience functions that emulate
  Python's behaviour.
- Promotes the private function in the ConfigParser to a free function
  so that it can be used elsewhere.
- This works with any type of string (at least in principle).

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -12,6 +12,7 @@ set(ZEUS_TEST_FILES
     ${ZEUS_TEST_ROOT}/enum_bitfield_test.cpp
     ${ZEUS_TEST_ROOT}/random_test.cpp
     ${ZEUS_TEST_ROOT}/config_parser_test.cpp
+    ${ZEUS_TEST_ROOT}/string_test.cpp
     )
 
 set(ZEUS_TEST_GROUP ${ZEUS_TEST_FILES} PARENT_SCOPE)
