[brief] Fixes install logic.
[detailed]
- Makes sure that unit tests are not enabled by default. Targets that
  import Zeus should not have to manually set the building of the unit
  tests to false, this should be up to the presets.
- Fixes the name of the installed config file to ensure it matches the
  version file so specific versions of Zeus can be found.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ set(ZEUS_VERSION_FULL
 #================================
 # Option variables.
 #================================
-option(ZEUS_BUILD_TESTS "Build Zeus unit tests" ON)
+option(ZEUS_BUILD_TESTS "Build Zeus unit tests" OFF)
 option(ZEUS_INSTALL_TARGET "Create install target" OFF)
 
 #================================
@@ -127,7 +127,7 @@ if (ZEUS_INSTALL_TARGET)
         )
 
     install(FILES
-        "${CMAKE_CURRENT_SOURCE_DIR}/cmake/zeus-config.cmake"
+        "${CMAKE_CURRENT_SOURCE_DIR}/cmake/zeusConfig.cmake"
         "${CMAKE_CURRENT_BINARY_DIR}/zeusConfigVersion.cmake"
         DESTINATION lib/cmake/zeus
         )
