[brief] Update the compiler versions for GCC and Clang.
[detailed]
- Usage of constexpr std::vector/string requires a minimum version of 12
  for GCC and 15 for Clang.

--- a/.github/workflows/clang.yml
+++ b/.github/workflows/clang.yml
@@ -27,6 +27,11 @@ jobs:
             cxx: "clang++"
           }
     steps:
+      - name: Setup Clang
+        uses: egor-tensin/setup-clang@v1
+        with:
+          version: latest
+
       - uses: actions/checkout@v3
 
       - name: Setup
