--- a/.github/workflows/clang.yml
+++ b/.github/workflows/clang.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Setup Clang
         uses: egor-tensin/setup-clang@v1
         with:
-          version: latest
+          version: 15
 
       - uses: actions/checkout@v3
 
