[brief] Update Linux builds to use new presets.
[detailed]
- Also forgot to set the debug version of GCC to use GCC 12.

--- a/.github/workflows/clang.yml
+++ b/.github/workflows/clang.yml
@@ -41,7 +41,7 @@ jobs:
           CC: ${{ matrix.config.cc }}
           CXX: ${{ matrix.config.cxx }}
         run: |
-          cmake --preset=clang -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DBUILD_SHARED_LIBS=OFF
+          cmake --preset=clang-fetch -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DBUILD_SHARED_LIBS=OFF
 
       - name: Build
         shell: bash
