--- a/.github/workflows/gcc.yml
+++ b/.github/workflows/gcc.yml
@@ -15,8 +15,8 @@ jobs:
             artifact: "linux_gcc_debug.tar.xz",
             os: ubuntu-latest,
             build_type: "Debug",
-            cc: "gcc-10",
-            cxx: "g++-10"
+            cc: "gcc-12",
+            cxx: "g++-12"
           }
         - {
             name: "Linux GCC Release",
@@ -36,7 +36,7 @@ jobs:
           CC: ${{ matrix.config.cc }}
           CXX: ${{ matrix.config.cxx }}
         run: |
-          cmake --preset=gcc -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DBUILD_SHARED_LIBS=OFF
+          cmake --preset=gcc-fetch -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DBUILD_SHARED_LIBS=OFF
 
       - name: Build
         shell: bash
