[brief] Adds version macros.
[detailed]
- Macros are more flexible since they allow us to disable code so it
  won't be compiled (unlike the constexpr variables which require the
  code to still compile).

--- a/include/zeus/zeus.hpp.in
+++ b/include/zeus/zeus.hpp.in
@@ -2,6 +2,10 @@
 
 #include <string_view>
 
+#define ZEUS_VERSION_MAJOR @ZEUS_VERSION_MAJOR@
+#define ZEUS_VERSION_MINOR @ZEUS_VERSION_MINOR@
+#define ZEUS_VERSION_PATCH @ZEUS_VERSION_PATCH@
+
 namespace zeus
 {
     static constexpr auto zeus_version_major{@ZEUS_VERSION_MAJOR@};
