--- a/.github/workflows/msvc.yml
+++ b/.github/workflows/msvc.yml
@@ -1,6 +1,19 @@
 name: MSVC
 
-on: [push]
+on:
+  push:
+    branches: [ master ]
+    paths-ignore:
+      - 'README.md'
+      - 'LICENSE'
+      - '.clang-format'
+  pull_request:
+    branches: [ master ]
+    paths-ignore:
+      - 'README.md'
+      - 'LICENSE'
+      - '.clang-format'
+  workflow_dispatch:
 
 jobs:
   build:
@@ -12,7 +25,6 @@ jobs:
         config:
         - {
             name: "MSVC Debug",
-            artifact: "msvc_debug.tar.xz",
             os: windows-latest,
             build_type: "Debug",
             cc: "cl",
@@ -21,7 +33,6 @@ jobs:
           }
         - {
             name: "MSVC Release",
-            artifact: "msvc_release.tar.xz",
             os: windows-latest,
             build_type: "Release",
             cc: "cl",
@@ -31,22 +42,46 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Setup
+      - name: Cache dependencies
+        uses: actions/cache@v3
+        env:
+          cache-name: zeus_deps
+        with:
+          path: C:/deps
+          key: ${{ env.cache-name }}-build-${{ matrix.config.build_type }}
+
+      - name: Install dependencies
+        shell: powershell
+        working-directory: C:/deps
+        env:
+          BUILD_TYPE: ${{ matrix.config.build_type }}
+        run: |
+          $c="C:/deps"
+          if(-not (Test-Path $c))
+          {
+            git clone https://github.com/fmtlib/fmt.git --branch 9.1.0 --depth 1
+            cmake -G "Visual Studio 17 2022" -S fmt -B fmt/build -D FMT_INSTALL=ON
+            cd ./fmt/build
+            cmake --build . --config $env:BUILD_TYPE
+            cmake --build . --target INSTALL
+            cd ../..
+            git clone https://github.com/catchorg/Catch2.git --branch v3.3.2 --depth 1
+            cmake -G "Visual Studio 17 2022" -S Catch2 -B Catch2/build -D INSTALL_DOCS=OFF -D INSTALL_EXTRAS=OFF
+            cd ./Catch2/build
+            cmake --build . --config $env:BUILD_TYPE
+            cmake --build . --target INSTALL
+          }
+
+      - name: Build
         shell: powershell
         env:
           BUILD_TYPE: ${{ matrix.config.build_type }}
         run: |
           cmake --preset=msvc -DBUILD_SHARED_LIBS=OFF
-
-      - name: Build
-        shell: powershell
-        working-directory: ./build
-        env:
-          BUILD_TYPE: ${{ matrix.config.build_type }}
-        run: |
+          cd ./build
           cmake --build . --config $env:BUILD_TYPE
 
-      - name: Test
+      - name: Run tests
         shell: powershell
         working-directory: ./build
         env:
