--- a/.github/workflows/msvc.yml
+++ b/.github/workflows/msvc.yml
@@ -59,7 +59,7 @@ jobs:
           if(-not (Test-Path $c))
           {
             git clone https://github.com/fmtlib/fmt.git --branch 9.1.0 --depth 1
-            cmake -G "Visual Studio 17 2022" -S fmt -B fmt/build -DFMT_INSTALL=ON -DCMAKE_INSTALL_PREFIX=C:/deps/fmt
+            cmake -G "Visual Studio 17 2022" -S fmt -B fmt/build -DFMT_INSTALL=ON -DFMT_TEST=OFF -DCMAKE_INSTALL_PREFIX=C:/deps/fmt
             cd ./fmt/build
             cmake --build . --config $env:BUILD_TYPE
             cmake --build . --target INSTALL
