--- a/.github/workflows/msvc.yml
+++ b/.github/workflows/msvc.yml
@@ -29,7 +29,6 @@ jobs:
             build_type: "Debug",
             cc: "cl",
             cxx: "cl",
-            environment_script: "C:/Program Files (x86)/Microsoft Visual Studio/2019/Enterprise/VC/Auxiliary/Build/vcvars64.bat"
           }
         - {
             name: "MSVC Release",
@@ -37,7 +36,6 @@ jobs:
             build_type: "Release",
             cc: "cl",
             cxx: "cl",
-            environment_script: "C:/Program Files (x86)/Microsoft Visual Studio/2019/Enterprise/VC/Auxiliary/Build/vcvars64.bat"
           }
     steps:
       - uses: actions/checkout@v3
@@ -59,13 +57,13 @@ jobs:
           if(-not (Test-Path $c))
           {
             git clone https://github.com/fmtlib/fmt.git --branch 9.1.0 --depth 1
-            cmake -G "Visual Studio 17 2022" -S fmt -B fmt/build -DFMT_INSTALL=ON -DFMT_TEST=OFF -DCMAKE_INSTALL_PREFIX=C:/deps/fmt
+            cmake -G "Visual Studio 17 2022" -S fmt -B fmt/build -DCMAKE_CXX_STANDARD=20 -DFMT_INSTALL=ON -DFMT_TEST=OFF -DCMAKE_INSTALL_PREFIX=C:/deps/fmt
             cd ./fmt/build
             cmake --build . --config $env:BUILD_TYPE
             cmake --build . --target INSTALL
             cd ../..
             git clone https://github.com/catchorg/Catch2.git --branch v3.3.2 --depth 1
-            cmake -G "Visual Studio 17 2022" -S Catch2 -B Catch2/build -DINSTALL_DOCS=OFF -DINSTALL_EXTRAS=OFF -DCMAKE_INSTALL_PREFIX=C:/deps/Catch2
+            cmake -G "Visual Studio 17 2022" -S Catch2 -B Catch2/build -DCMAKE_CXX_STANDARD=20 -DCATCH_INSTALL_DOCS=OFF -DCATCH_INSTALL_EXTRAS=OFF -DCMAKE_INSTALL_PREFIX=C:/deps/Catch2
             cd ./Catch2/build
             cmake --build . --config $env:BUILD_TYPE
             cmake --build . --target INSTALL
