[brief] Update all workflows to use caching.
[detailed]
- Updates gcc and clang workflows to match what msvc is using.
- Fixes the way the cache names are made so they're unique for each
  workflow.
- Removes the fetch presets for building.

--- a/.github/workflows/msvc.yml
+++ b/.github/workflows/msvc.yml
@@ -46,7 +46,7 @@ jobs:
           cache-name: zeus_deps
         with:
           path: C:/deps
-          key: ${{ env.cache-name }}-build-${{ matrix.config.build_type }}
+          key: ${{ env.cache-name }}-msvc-${{ matrix.config.build_type }}
 
       - name: Install dependencies
         shell: powershell
