--- a/.github/workflows/clang.yml
+++ b/.github/workflows/clang.yml
@@ -1,6 +1,19 @@
 name: Clang
 
-on: [push]
+on:
+  push:
+    branches: [ master ]
+    paths-ignore:
+      - 'README.md'
+      - 'LICENSE'
+      - '.clang-format'
+  pull_request:
+    branches: [ master ]
+    paths-ignore:
+      - 'README.md'
+      - 'LICENSE'
+      - '.clang-format'
+  workflow_dispatch:
 
 jobs:
   build:
@@ -12,7 +25,6 @@ jobs:
         config:
         - {
             name: "Linux Clang Debug",
-            artifact: "linux_gcc_debug.tar.xz",
             os: ubuntu-latest,
             build_type: "Debug",
             cc: "clang",
@@ -20,36 +32,57 @@ jobs:
           }
         - {
             name: "Linux Clang Release",
-            artifact: "linux_gcc_release.tar.xz",
             os: ubuntu-latest,
             build_type: "Release",
             cc: "clang",
             cxx: "clang++"
           }
     steps:
-      - name: Setup Clang
+      - uses: actions/checkout@v3
+
+      - name: Install clang
         uses: egor-tensin/setup-clang@v1
         with:
           version: 15
 
-      - uses: actions/checkout@v3
+      - name: Cache dependencies
+        uses: actions/cache@v3
+        env:
+          cache-name: zeus_deps
+        with:
+          path: ~/deps
+          key: ${{ env.cache-name }}-clang-${{ matrix.config.build_type }}
 
-      - name: Setup
+      - name: Install dependencies
         shell: bash
         env:
           BUILD_TYPE: ${{ matrix.config.build_type }}
           CC: ${{ matrix.config.cc }}
           CXX: ${{ matrix.config.cxx }}
         run: |
-          cmake --preset=clang-fetch -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DBUILD_SHARED_LIBS=OFF
+          if [ ! -d ~/deps ]; then
+            git clone https://github.com/fmtlib/fmt.git --branch 9.1.0 --depth 1
+            cmake -S fmt -B fmt/build -DCMAKE_CXX_STANDARD=20 -DFMT_INSTALL=ON -DFMT_TEST=OFF -DCMAKE_INSTALL_PREFIX=~/deps/fmt
+            cd ./fmt/build
+            make
+            make install
+            cd ../..
+            git clone https://github.com/catchorg/Catch2.git --branch v3.3.2 --depth 1
+            cmake -S Catch2 -B Catch2/build -DCMAKE_CXX_STANDARD=20 -DCATCH_INSTALL_DOCS=OFF -DCMAKE_INSTALL_PREFIX=~/deps/Catch2
+            cd ./Catch2/build
+            make
+            make install
+          fi
 
       - name: Build
         shell: bash
-        working-directory: ./build
         env:
+          BUILD_TYPE: ${{ matrix.config.build_type }}
           CC: ${{ matrix.config.cc }}
           CXX: ${{ matrix.config.cxx }}
         run: |
+          cmake --preset=clang -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DBUILD_SHARED_LIBS=OFF
+          cd ./build
           make
 
       - name: Test
@@ -60,5 +93,3 @@ jobs:
           CXX: ${{ matrix.config.cxx }}
         run: |
           make test
-
-
