[brief] Forgot to set the prefix path for linux builds.
[detailed]

--- a/.github/workflows/gcc.yml
+++ b/.github/workflows/gcc.yml
@@ -76,7 +76,7 @@ jobs:
           CC: ${{ matrix.config.cc }}
           CXX: ${{ matrix.config.cxx }}
         run: |
-          cmake --preset=gcc -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DBUILD_SHARED_LIBS=OFF
+          cmake --preset=gcc -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DBUILD_SHARED_LIBS=OFF -DCMAKE_PREFIX_PATH=~/deps
           cd ./build
           make
 
