--- a/.github/workflows/msvc.yml
+++ b/.github/workflows/msvc.yml
@@ -7,6 +7,7 @@ on:
       - 'README.md'
       - 'LICENSE'
       - '.clang-format'
+      - 'data/**'
   pull_request:
     branches: [ master ]
     paths-ignore:
