[brief] Adds a range similar to what Python has.
[detailed]

--- a/include/zeus/CMakeLists.txt
+++ b/include/zeus/CMakeLists.txt
@@ -20,6 +20,7 @@ set(ZEUS_HEADER_LIST
     ${ZEUS_SOURCE_ROOT}/zeus/concepts.hpp
     ${ZEUS_SOURCE_ROOT}/zeus/random.hpp
     ${ZEUS_SOURCE_ROOT}/zeus/string.hpp
+    ${ZEUS_SOURCE_ROOT}/zeus/range.hpp
     )
 
 # Wrap each list for the source groups above.
