[brief] Adds unit tests for concepts.
[detailed]
- All concepts are now fully unit tested.
- Adds a test for the delimiter functor concept from string.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -12,6 +12,7 @@ set(TEST_SOURCE
     ${ZEUS_TEST_ROOT}/random_test.cpp
     ${ZEUS_TEST_ROOT}/string_test.cpp
     ${ZEUS_TEST_ROOT}/range_test.cpp
+    ${ZEUS_TEST_ROOT}/concepts_test.cpp
     )
 
 source_group("source" FILES ${TEST_SOURCE})
