[brief] Adds a container traits header.
[detailed]
- The standard defines a series of traits that the standard container
  must satisfy, yet oddly there are no type traits or concepts to check
  for them. This header is meant to provide that functionality.
  Currently only adding ContiguousContainer.

--- a/include/zeus/CMakeLists.txt
+++ b/include/zeus/CMakeLists.txt
@@ -22,6 +22,7 @@ set(ZEUS_INCLUDE_LIST
     ${INCLUDE_ROOT}/random.hpp
     ${INCLUDE_ROOT}/string.hpp
     ${INCLUDE_ROOT}/range.hpp
+    ${INCLUDE_ROOT}/container_traits.hpp
     )
 
 source_group("include" FILES)
