--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,30 +1,10 @@
 name: Build
 
 on:
-  push:
-    branches: [ master ]
-    paths-ignore:
-      - '**.md'
-      - '**.rst'
-      - 'LICENSE'
-      - 'data/**'
-      - '**/release-*.yml'
-    tags-ignore:
-      - "*.*.*"
-  pull_request:
-    branches: [ master ]
-    paths-ignore:
-      - '**.md'
-      - '**.rst'
-      - 'LICENSE'
-      - '**/release-*.yml'
-    tags-ignore:
-      - "*.*.*"
+  workflow_call:
   workflow_dispatch:
 
 jobs:
-  format:
-    uses: ./.github/workflows/clang-format.yml
   build:
     name: ${{ matrix.config.os }}-${{ matrix.config.preset }}
     runs-on: ${{ matrix.config.os }}
