[brief] Remove the requirement of the build config when building dependencies
[detailed]
- In Linux, we shouldn't specify a build, we just build it as is.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,12 +61,12 @@ jobs:
           BUILD_TYPE: ${{ matrix.build }}
         run: |
           if [[ "$OSTYPE" == "msys" ]]; then
-            python tools/build_dependencies.py ~/deps $BUILD_TYPE
+            python tools/build_dependencies.py ~/deps -b $BUILD_TYPE
           else
             # Clang and GCC binaries are compatible, so only compile with GCC.
             export CC="gcc-14"
             export CXX="g++-14"
-            python3 tools/build_dependencies.py ~/deps $BUILD_TYPE
+            python3 tools/build_dependencies.py ~/deps
           fi
 
       - name: Build Zeus
