[brief] Fixes compiler issues on Apple.
[detailed]
- The get_file_last_write function is going to need to be disabled on
  Apple since their support of chrono is weird. It doesn't follow the
  implementation that GCC and Clang both have, but it also doesn't
  follow that MSVC does. Since this function is not really used outside
  of a few cases that can't run in Apple platforms to begin with, it's
  better off staying disabled for now.

--- a/include/zeus/CMakeLists.txt
+++ b/include/zeus/CMakeLists.txt
@@ -33,7 +33,7 @@ target_include_directories(zeus INTERFACE
     $<BUILD_INTERFACE:${ZEUS_SOURCE_ROOT}>
     $<INSTALL_INTERFACE:include>)
 target_link_libraries(zeus INTERFACE fmt::fmt magic_enum::magic_enum)
-if (NOT MSVC)
+if (NOT MSVC AND NOT APPLE)
     target_link_libraries(zeus INTERFACE stdc++fs)
 endif()
 target_compile_features(zeus INTERFACE cxx_std_20)
