--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,6 +63,8 @@ jobs:
         run: |
           if [[ "$OSTYPE" == "msys" ]]; then
             python tools/build_dependencies.py ~/deps -b $BUILD_TYPE
+          elif [[ "$OSTYPE" == "darwin" ]]; then
+            python3 tools/build_dependencies.py ~/deps
           else
             # Clang and GCC binaries are compatible, so only compile with GCC.
             export CC="gcc-14"
